<resources>
    <string name="app_name">Investment Simulator</string>

    <!-- ERROR -->
    <string name="error_generic">Ocorreu um erro inesperado, tente novamente mais tarde.</string>
    <string name="no_connection">Você está sem conexão com a internet.</string>
    <string name="error_timeout">O serviço está temporariamente indisponível, tente novamente mais tarde</string>

    <string name="index_cdi">CDI</string>

    <string name="simulator_toapply_label">Quanto você gostaria de aplicar? *</string>
    <string name="simulator_date_label">Qual a data de vencimento do investimento? *</string>
    <string name="simulator_percent_label">Qual o percentual do CDI do investimento? *</string>
    <string name="simulator_toapply_hint">R$</string>
    <string name="simulator_date_hint">dia/mês/ano</string>
    <string name="simulator_percent_hint">100%</string>
    <string name="simulator_simulate_button">Simular</string>

    <string name="simulation_result_title">Resultado da simulação</string>
    <string name="simulation_result_profit_total_label">Rendimento total de R$ %s</string>
    <string name="simulation_result_initial_amount_label">Valor aplicado inicialmente</string>
    <string name="simulation_result_gross_amount_label">Valor bruto do investimento</string>
    <string name="simulation_result_profit_amount_label">Valor do rendimento</string>
    <string name="simulation_result_ir_value">R$ %s(%s%%)</string>
    <string name="simulation_result_ir_amount_label">IR sobre o investimento</string>
    <string name="simulation_result_net_amount_label">Valor líquido do investimento</string>
    <string name="simulation_result_maturity_date_label">Data de resgate</string>
    <string name="simulation_result_maturity_total_days_label">Dias corridos</string>
    <string name="simulation_result_month_profit_label">Rendimento mensal</string>
    <string name="simulation_result_investment_percent_label">Percentual do CDI do investimento</string>
    <string name="simulation_result_year_profit_label">Rentabilidade anual</string>
    <string name="simulation_result_rate_profit_label">Rentabilidade no período</string>
    <string name="simulation_result_simulate_button">Simular novamente</string>

    <string name="formatted_currency_value">R$ %s</string>
    <string name="formatted_date">%s/%s/%s</string>
    <string name="formatted_percent_value">%s%%</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
