<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".feat.simulationresult.ui.SimulationResultFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/grossAmountTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1.088,69"
        android:layout_marginTop="@dimen/default_margin"
        android:textSize="@dimen/text_realy_big"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profitTotalLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_profit_total_label"
        android:gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/grossAmountTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/initialAmountLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_initial_amount_label"
        android:layout_marginTop="@dimen/header_margin"
        app:layout_constraintTop_toBottomOf="@+id/profitTotalLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/initialAmountTextView"/>

    <TextView
        android:id="@+id/initialAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 1.000,00"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/initialAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/grossAmountLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_gross_amount_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/initialAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/grossAmountTextView"/>

    <TextView
        android:id="@+id/grossAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 1.088,69"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/grossAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/profitAmountLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_profit_amount_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/grossAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profitAmountTextView"/>

    <TextView
        android:id="@+id/profitAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 88,69"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/profitAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/irAmountLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_ir_amount_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/profitAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/irAmountTextView"/>

    <TextView
        android:id="@+id/irAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 15,52(17,50%)"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/irAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/netAmountLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_net_amount_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/irAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/netAmountTextView"/>

    <TextView
        android:id="@+id/netAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 1.073,17"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/netAmountLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/maturityDateLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_maturity_date_label"
        android:layout_marginTop="@dimen/header_margin"
        app:layout_constraintTop_toBottomOf="@+id/netAmountLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/maturityDateTextView"/>

    <TextView
        android:id="@+id/maturityDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="27/10/2018"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/maturityDateLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/maturityDaysLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_maturity_total_days_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/maturityDateLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/maturityDaysTextView"/>

    <TextView
        android:id="@+id/maturityDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="365"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/maturityDaysLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/monthProfitLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_month_profit_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/maturityDaysLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monthProfitsTextView"/>

    <TextView
        android:id="@+id/monthProfitsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="0,57%"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/monthProfitLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/investmentPercentLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_investment_percent_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/monthProfitLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/investmentPercentTextView"/>

    <TextView
        android:id="@+id/investmentPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="123%"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/investmentPercentLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/yearProfitLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_year_profit_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/investmentPercentLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yearProfitTextView"/>

    <TextView
        android:id="@+id/yearProfitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="7,09%"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/yearProfitLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/rateProfitLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/simulation_result_rate_profit_label"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/yearProfitLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rateProfitTextView"/>

    <TextView
        android:id="@+id/rateProfitTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="8,87%"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/rateProfitLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/simulateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/simulation_result_simulate_button"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/DefaultButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>