<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.feliperce.investmentsimulator.feat.simulator.viewmodel.SimulatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        app:errorHandlerSnackbar="@{viewModel.errorHandlerLiveData}"
        tools:context=".feat.simulator.ui.SimulatorFragment">

        <TextView
            android:id="@+id/toApplyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/simulator_toapply_label"
            android:gravity="center"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toApplyEditText" />

        <EditText
            android:id="@+id/toApplyEditText"
            style="@style/SimulatorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/simulator_toapply_hint"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/applyMonthTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toApplyTextView" />

        <TextView
            android:id="@+id/applyMonthTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/simulator_date_label"
            android:gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/toApplyEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/applyMonthEditText" />

        <EditText
            android:id="@+id/applyMonthEditText"
            style="@style/SimulatorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/simulator_date_hint"
            android:inputType="date"
            android:clickable="false"
            android:focusable="false"
            app:layout_constraintBottom_toTopOf="@+id/percentTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/applyMonthTextView" />

        <TextView
            android:id="@+id/percentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/simulator_percent_label"
            android:gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@+id/applyMonthEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/percentEditText" />

        <EditText
            android:id="@+id/percentEditText"
            style="@style/SimulatorEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/simulator_percent_hint"
            android:inputType="number"
            android:maxLength="4"
            app:layout_constraintBottom_toTopOf="@+id/simulateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/percentTextView" />

        <Button
            android:id="@+id/simulateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/simulator_simulate_button"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintVertical_bias=".5"
            app:boolEnabled="@{viewModel.formValidationLiveData}"
            style="@style/DefaultButton"
            app:layout_constraintTop_toBottomOf="@+id/percentEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boolVisibility="@{viewModel.dataLoadingLiveData}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>